# pipeline_report_olist

./: .gitignore  .pre-commit-config.yaml  example.env  pyproject.toml  readme.md
.github/workflows/: merge-pipeline.yaml  pr-pipeline.yaml
airflow/: airflow_settings.yaml  requirements.txt
airflow/dags/: dag.py
dags/: dag.py
infra/: backend.tf  buckets.tf  emr_serverless.tf  iam.tf  main.tf  network.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
jobs/: main.py
jobs/base/: job.py  variables.py
jobs/curated/products/: job.py
jobs/curated/sales_consolidated/: job.py
jobs/curated/sales_per_state/: job.py
jobs/curated/sellers/: job.py
jobs/landing/api_to_s3/: job.py
jobs/landing/kaggle_to_s3/: job.py
jobs/raw/api/: job.py
jobs/raw/kaggle/: job.py
tests/: conftest.py
tests/jobs/curated/products/: test_job.py
tests/jobs/curated/products/__snapshots__/: test_job.ambr
tests/jobs/curated/sales_consolidated/: test_job.py
tests/jobs/curated/sales_consolidated/__snapshots__/: test_job.ambr
tests/jobs/curated/sales_per_state/: test_job.py
tests/jobs/curated/sales_per_state/__snapshots__/: test_job.ambr
