[project]
name = "pipeline-report-olist"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Barata"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"
apache-airflow = "2.10.5"

[tool.isort]
profile = "black"
line_length = 88

[tool.blue]
line-length = 88
